# WhatCanWePlay

./: .gitignore  Cargo.toml  LICENSE  README.md  __init__.py  app.py  build.rs  config.json  config_EXAMPLE.json  exceptions.py  igdb_utils.py  steam_utils.py  test.py  wcwp_config_EXAMPLE.jsonc
lib/wcwp_rust/: Cargo.toml
lib/wcwp_rust/src/: errors.rs  igdb.rs  lib.rs  python.rs  steam.rs  wcwp.rs
src/: main.rs  routes.rs  serde_utils.rs
src/api/: mod.rs  steam.rs  testing.rs
src/api/steam/: backend.rs  frontend.rs  mod.rs
src/routes/: mod.rs
src/structs/: cache_fs.rs  email.rs  mod.rs  steam_user.rs  wcwp_config.rs
static/scripts/: api_test.js  app.js  app_base.js  fetch_timeout.js  logged_in.js  logged_out.js  wcwp_app.js
static/styles/: api_test.css  app.css  base_dark.css  default_dark.css  fit_into_screen.css  footer.css  grid.css  header.css  index.css  wcwp_app.css
static/templates/: base_page.html  home.html
templates/: api_test.html  api_test.html.tera  app.html  app.html.tera  base_page.html  base_page.html.tera  footer.html.tera  home.html  home.html.tera  index.html.tera  not_signed_in.html  privacy.html  privacy.html.tera  prototype.html
