[package]
name = "whatcanweplay"
version = "0.1.0"
authors = ["TGRCDev <tgrc@tgrc.dev>"]
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-or-later"

[dependencies]
exitcode = "1.1.2"
figment = { version = "0.10.6", features = ["json"] }
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0.133"

[build-dependencies]
anyhow = "1.0.52"
vergen = { version = "6.0.0", features = ["git"], default-features = false }

[features]
