[package]
name = "whatcanweplay"
version = "0.1.0"
authors = ["TGRCDev <tgrc@tgrc.dev>"]
edition = "2018"

[lib]
name = "whatcanweplay"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "std"] }
pyo3 = { version = "0.12", features = ["extension-module"] }